--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,11 @@ psycopg2==2.5.3
 pystache==0.5.4
 static==1.0.2
 wsgiref==0.1.2
+PyYAML==3.11
+South==0.8
+django-bootstrap3-datetimepicker==2.2.3
+django-guardian==1.2.0
+django-registration==1.0
+django-userena==1.3.0
+easy-thumbnails==2.0.1
+
